[project]
name = 'sqoof'
version = '0.1.1'
description = "Structured Querying in Object Oriented Fashion"
authors = [
	{name="Egor Vorontsov", email='sdoregor@sdore.me'},
	{name="Alexander Chechenev", email='alexandeer038@gmail.com'},
	{name="Nikita Panarin", email='panatikin@gmail.com'},
]
readme = 'README.md'
requires-python = '~=3.13'
dependencies = [
    'graphene ~= 3.4',
    'sqlalchemy ~= 2',
]

[build-system]
requires = ['poetry-core >= 2.0.0, < 3.0.0']
build-backend = 'poetry.core.masonry.api'
